--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@types/escodegen": "0.0.6",
     "@types/esprima": "^4.0.2",
     "@types/esprima-walk": "^0.1.1",
+    "@types/js-md5": "^0.4.2",
     "collectionjs": "^0.3.4",
     "collectionsjs": "^0.3.2",
     "escodegen": "^1.11.1",
     "esprima": "^4.0.1",
     "esprima-walk": "^0.1.0",
+    "js-md5": "^0.7.3",
     "typescript-collections": "^1.3.2"
   }
 }
