--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/jasmine": "^3.3.13",
     "@types/jasmine-ajax": "^3.1.40",
+    "html-webpack-plugin": "^3.2.0",
     "jasmine": "^3.4.0",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^3.4.0",
@@ -20,7 +21,8 @@
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1",
     "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "@types/escodegen": "0.0.6",
