--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "progrem-viewer",
   "version": "0.0.1",
   "description": "Progrem viewer",
-  "main": "index.js",
+  "main": "index.ts",
+  "sideEffects": false,
   "scripts": {
     "build": "webpack",
     "test": "jasmine-ts"
@@ -12,6 +13,10 @@
   "devDependencies": {
     "@types/jasmine": "^3.3.13",
     "@types/jasmine-ajax": "^3.1.40",
+    "@types/escodegen": "0.0.6",
+    "@types/esprima": "^4.0.2",
+    "@types/esprima-walk": "^0.1.1",
+    "@types/js-md5": "^0.4.2",
     "html-webpack-plugin": "^3.2.0",
     "jasmine": "^3.4.0",
     "jasmine-ajax": "^4.0.0",
@@ -25,10 +30,6 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
-    "@types/escodegen": "0.0.6",
-    "@types/esprima": "^4.0.2",
-    "@types/esprima-walk": "^0.1.1",
-    "@types/js-md5": "^0.4.2",
     "escodegen": "^1.11.1",
     "esprima": "^4.0.1",
     "esprima-walk": "^0.1.0",
