--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "author": "Maxime Bossard",
   "license": "ISC",
   "devDependencies": {
-    "@types/jasmine": "^3.3.13",
-    "@types/jasmine-ajax": "^3.1.40",
     "@types/escodegen": "0.0.6",
     "@types/esprima": "^4.0.2",
     "@types/esprima-walk": "^0.1.1",
+    "@types/jasmine": "^3.3.13",
+    "@types/jasmine-ajax": "^3.1.40",
     "@types/js-md5": "^0.4.2",
+    "@types/jsdom": "^12.2.3",
     "html-webpack-plugin": "^3.2.0",
     "jasmine": "^3.4.0",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^3.4.0",
     "jasmine-ts": "^0.3.0",
+    "jsdom": "^15.1.1",
     "ts-loader": "^6.0.2",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1",
