Add RxJs. Add a blink for current pixel wich will be colored in grid.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "escodegen": "^1.11.1",
     "esprima": "^4.0.1",
     "esprima-walk": "^0.1.0",
-    "js-md5": "^0.7.3"
+    "js-md5": "^0.7.3",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2"
   }
 }
