--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/jasmine-ajax": "^3.1.40",
     "@types/js-md5": "^0.4.2",
     "@types/jsdom": "^12.2.3",
+    "css-loader": "^3.1.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "jasmine": "^3.4.0",
     "jasmine-ajax": "^4.0.0",
